# TP2SO

./: ArquivoTexto.c  ArquivoTexto.h  CMakeLists.txt  Commander.c  Commander.h  ProcessManager.c  ProcessManager.h  ProcessoSimulado.c  ProcessoSimulado.h  Reporter.c  Reporter.h  TADFila.c  TADFila.h  main.c
